name:                facetools
version:             1
synopsis:            Programs for parsing and manipulating data from Facebook's "Download Your Information" bundle.
homepage:            https://github.com/relrod/facetools
license:             BSD2
license-file:        LICENSE
author:              Ricky Elrod
maintainer:          ricky@elrod.me
copyright:           (c) 2016 Ricky Elrod
category:            Facebook
build-type:          Simple
cabal-version:       >=1.10

executable facetools-parse
  main-is:             Parse.hs
  build-depends:       base >= 4 && < 5
                     , aeson >= 0.8 && < 0.12
                     , bytestring >= 0.10
                     , directory >= 1.2 && < 1.3
                     , split >= 0.2
                     , text >= 1 && < 1.3
                     , time >= 1.4 && < 2
                     , tagsoup >= 0.13 && < 0.14
                     , containers >= 0.5 && < 0.6
  hs-source-dirs:      src/Facebook/Messages
  default-language:    Haskell2010

executable facetools-freqchart
  main-is:             Count.hs
  build-depends:       base >= 4 && < 5
                     , aeson >= 0.8 && < 0.12
                     , bytestring >= 0.10
                     , text >= 1 && < 1.3
                     , time >= 1.4 && < 2
                     , containers >= 0.5 && < 0.6
  hs-source-dirs:      src/Facebook/Messages
  default-language:    Haskell2010
